--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -1685,7 +1685,7 @@ a.btn.search-submit:hover, a.btn.search-submit:active {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    background-image: url(../img/visa_PNG39.png);
+    background-image: url(../afffile/img/visa_PNG39.png);
     margin: auto;
 }
 
@@ -1845,7 +1845,7 @@ a.btn.search-submit:hover, a.btn.search-submit:active {
     width: 100px;
     height: 100%;
     margin: auto;
-    background-image: url(../img/visa_PNG39.png);
+    background-image: url(../afffile/img/visa_PNG39.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
